# yew_router

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  build.rs  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
YewRouter/: Cargo.toml  proposal.md
YewRouter/examples/routing_component/: Cargo.toml
YewRouter/examples/routing_component/src/: a_component.rs  b_component.rs  c_component.rs  main.rs
YewRouter/src/: lib.rs  route.rs  route_agent.rs  route_info.rs  router_agent.rs  routing_service.rs
YewRouter/src/component_router/: mod.rs  render.rs  route.rs  router.rs
YewRouter/src/components/: mod.rs  router_button.rs  router_link.rs
YewRouter/src/util/: directional.rs  mod.rs
ci/: run_checks.sh
crates/yew_router_from_matches_macro_impl/src/: lib.rs
crates/yew_router_macro/: Cargo.toml
crates/yew_router_macro/src/: from_captures.rs  from_matches.rs  lib.rs  route.rs  switch.rs
crates/yew_router_macro/src/switch/: attribute.rs  enum_impl.rs  shadow.rs  struct_impl.rs  switch_impl.rs
crates/yew_router_macro/src/switch/enum_impl/: build_route_section.rs  from_route_part.rs
crates/yew_router_macro/src/switch/struct_impl/: build_route_section.rs  from_route_part.rs
crates/yew_router_route_macro_impl/: Cargo.toml
crates/yew_router_route_macro_impl/src/: lib.rs
crates/yew_router_route_parser/: Cargo.toml
crates/yew_router_route_parser/src/: core.rs  error.rs  lib.rs  optimizer.rs  parser.rs  token_optimizer.rs
crates/yew_router_route_parser/src/parser/: core.rs  error.rs  fragment.rs  mod.rs  optimizer.rs  path.rs  query.rs  util.rs
examples/guide/: Cargo.toml
examples/guide/chapters/: 01_intro.md  02_router_component.md  03_route_macro.md  04_render.md  05_testing.md
examples/guide/src/: guide.rs  lib.rs  main.rs  markdown.rs  markdown_window.rs  page.rs
examples/minimal/: Cargo.toml  README.md
examples/minimal/src/: main.rs
examples/nested_routers/: Cargo.toml  README.md
examples/nested_routers/src/: a_comp.rs  b_comp.rs  main.rs  page_not_found.rs
examples/router_component/: Cargo.toml
examples/router_component/src/: a_component.rs  b_component.rs  c_component.rs  main.rs
examples/routing_component/: Cargo.toml
examples/routing_component/src/: a_component.rs  b_component.rs  c_component.rs  main.rs
examples/servers/: Readme.md
examples/servers/actix/: Cargo.toml
examples/servers/warp/src/: main.rs
examples/switch/: Cargo.toml
examples/switch/src/: main.rs
integration_test/: Cargo.toml
integration_test/src/: lib.rs
route_info_parser/: Cargo.toml
route_info_parser/src/: lib.rs  parser.rs  path_matcher.rs
src/: alias.rs  lib.rs  route.rs  route_info.rs  route_service.rs  router.rs  router_agent.rs  routing.rs  routing_service.rs  service.rs  switch.rs  yew_router.rs
src/agent/: bridge.rs  dispatcher.rs  mod.rs
src/component_router/: mod.rs  routable.rs  router.rs  router2.rs  router3.rs  yew_router.rs
src/component_routers/: mod.rs  routable.rs  yew_router.rs
src/components/: mod.rs  route_injector.rs  router_button.rs  router_link.rs
src/matcher/: matcher_impl.rs  mod.rs  regex_matcher.rs  util.rs
src/matcher/route_matcher/: match_paths.rs  matcher.rs  mod.rs  util.rs
src/router/: mod.rs  render.rs  route.rs  router.rs  router2.rs
src/router_component/: mod.rs
test_case1/: Cargo.toml
test_case1/src/: main.rs
tests/macro_test/: Cargo.toml
tests/macro_test/src/: lib.rs
yew_router/: Cargo.toml
yew_router/src/: alias.rs  lib.rs  route_agent.rs  route_info.rs  route_service.rs
yew_router/src/agent/: bridge.rs  mod.rs
yew_router/src/component_router/: mod.rs  render.rs  route.rs  router.rs
yew_router/src/components/: mod.rs  route_injector.rs  router_button.rs  router_link.rs
yew_router/src/matcher/: custom.rs  mod.rs  regex_matcher.rs
yew_router/src/matcher/route_matcher/: match_paths.rs  mod.rs
yew_router/src/router_component/: mod.rs  render.rs  route.rs  router.rs
yew_router/src/router_component/matcher/: mod.rs  regex_matcher.rs
yew_router_derive/: Cargo.toml
yew_router_derive/src/: lib.rs
yew_router_from_matches_macro_impl/: Cargo.toml
yew_router_from_matches_macro_impl/src/: lib.rs
yew_router_path_matcher/: Cargo.toml
yew_router_path_matcher/src/: lib.rs  match_paths.rs  util.rs
yew_router_route_macro_decl/: Cargo.toml
yew_router_route_macro_decl/src/: lib.rs
yew_router_route_macro_impl/: Cargo.toml
yew_router_route_macro_impl/src/: lib.rs
yew_router_route_parser/: Cargo.toml
yew_router_route_parser/src/: dead.rs  lib.rs  new_parser.rs  path_matcher.rs  token_optimizer.rs
yew_router_route_parser/src/parser/: core.rs  error.rs  fragment.rs  mod.rs  path.rs  query.rs  util.rs
