[package]
name = "yew-router"
version = "0.9.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>", "Sascha Grunert <mail@saschagrunert.de>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "yew", "router"]
categories = ["gui", "web-programming"]
description = "A router implementation for the Yew framework"
repository = "https://github.com/yewstack/yew_router"


[features]
default = ["core", "unit_alias"]

core = ["router", "components"] # Most everything

# TODO remove this
unit_alias = []

router = ["agent"] # The Router component
components = ["agent" ] # The button and anchor
agent = ["service"] # The RouteAgent
service = ["stdweb", "yew"] # The RouteService


[dependencies]
log = "0.4.8"
serde = {version = "1.0.103", features = ["derive"]}
yew = {version = "0.11.0", optional = true}
#yew = {git = "https://github.com/yewstack/yew", branch = "master", optional = true}
stdweb = {version = "0.4.20", optional = true}
yew-router-route-parser = {path = "crates/yew_router_route_parser", version = "0.9.0"}
yew-router-macro = {path = "crates/yew_router_macro", version = "0.9.0"}
nom = "5.0.1"
uuid = "0.8.1"
serde_json = "1.0.44"

# Compat with building yew with wasm-pack support.
[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
wasm-bindgen = "0.2.58"



[workspace]
members = [
    "crates/yew_router_route_parser",
    "crates/yew_router_macro",
    "examples/router_component",
    "examples/guide",
    "examples/switch",
    "examples/minimal",
    "examples/servers/warp",
    "tests/macro_test"
]
