[package]
name = "integration_test"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew_router_route_parser = {path = "../yew_router_route_parser"}
yew_router_derive = {path = "../yew_router_derive"}