[package]
name = "yew_router"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"


[features]
default = ["router", "components", "matchers"]

router = ["router_agent", "yew_router_route_parser"]
components = ["router_agent" ]

router_agent = []
matchers = [ "regex_matcher", "route_matcher"]
regex_matcher = ["regex"]
route_matcher = ["yew_router_route_parser", "yew_router_derive", "nom"]


[dependencies]
log = "0.4"
#web_logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
yew = { git = "https://github.com/yewstack/yew", branch="master" }
stdweb = "0.4"


yew_router_route_parser = {path = "../yew_router_route_parser", optional=true}
yew_router_derive = {path = "../yew_router_derive", optional=true}
nom = {version = "5.0.0", optional=true}
regex = {version = "1.3.1", optional=true}
