[package]
name = "yew_router_path_matcher"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew_router_route_parser = {path="../yew_router_route_parser"}
nom = "5.0.0"
log = "0.4.8"
yew = { git = "https://github.com/yewstack/yew", branch="master" }

[dev-dependencies]
env_logger = "0.6.2"