[package]
name = "yew-router-macro"
version = "0.6.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0.2"
quote = "1.0.1"
yew-router-route-parser = {path = "../yew_router_route_parser"}
proc-macro2 = "1.0.1"

[dev-dependencies]
yew-router = {path = "../.."}