[package]
name = "yew-router-macro"
version = "0.6.1"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Contains macros used with yew-router"
repository = "https://github.com/yewstack/yew_router"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0.2"
quote = "1.0.1"
yew-router-route-parser = {path = "../yew_router_route_parser", version = "0.6.1"}
proc-macro2 = "1.0.1"

[dev-dependencies]
yew-router = {path = "../..", version = "0.6.0"}