[package]
name = "guide"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.9.0"
yew_router = {path = "../../"}
web_logger = "0.2"
log = "0.4.8"
pulldown-cmark = "0.5.3"
