[package]
name = "minimal"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#yew = "0.11.0"
yew = {git = "https://github.com/yewstack/yew", branch = "web-sys", features = ["std_web"]}
yew-router = {path = "../../", features = ["std_web"]}
web_logger = "0.2"
log = "0.4.8"
wee_alloc = "0.4.5"
