[package]
name = "nested_routers"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew", branch="master" }
yew_router = {path = "../../"}
web_logger = "0.1"
log = "0.4.8"
wee_alloc = "0.4.5"
