[package]
name = "router_component"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

edition="2018"

[dependencies]
#yew = "0.10.0"
#yew = {git = "https://github.com/yewstack/yew", branch = "master"}
yew = {git = "https://github.com/jstarry/yew", branch = "vdom-degenerify"}
yew-router = {path = "../../"}
web_logger = "0.2"
log = "0.4.8"
wee_alloc = "0.4.5"