[package]
name = "routing_component"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
#yew = { git = "https://github.com/yewstack/yew", branch = "master" }
yew = { git = "https://github.com/jstarry/yew", branch = "component-children" }
yew_router = {path = "../.."}
web_logger = "0.1"
